updated notes content

--- a/notes/10. Graph.md
+++ b/notes/10. Graph.md
@@ -1,82 +1,107 @@
-#  Queue 
+# Graph
 
-A **Queue** is a linear data structure that follows the **First In, First Out (FIFO)** principle.
-
----
-
-##  Key Concepts
-
-- Elements are added from the **rear (tail)** and removed from the **front (head)**.
-- Basic operations:
-  - **enqueue(x)**: Add element `x` to the rear
-  - **dequeue()**: Remove and return the front element
-  - **peek/front()**: Return the front element without removing it
-  - **isEmpty()**: Check if queue is empty
+A **Graph** is a non-linear data structure consisting of a set of nodes (called vertices) connected by edges. Graphs can represent networks like social connections, maps, or communication networks.
 
 ---
 
-##  Time Complexity
+## Key Concepts
 
-| Operation | Time Complexity |
-|-----------|-----------------|
-| enqueue   | O(1)            |
-| dequeue   | O(1)            |
-| peek/front| O(1)            |
-| isEmpty   | O(1)            |
-
----
-
-##  Variants of Queue
-
-- **Simple Queue**: Basic FIFO
-- **Circular Queue**: Rear connects back to front to utilize space efficiently
-- **Priority Queue**: Elements are dequeued based on priority, not order
-- **Deque (Double-Ended Queue)**: Insert/delete from both ends
+- **Vertices (Nodes)**: Fundamental units/entities in the graph
+- **Edges**: Connections between vertices
+- Types of graphs:
+  - **Directed Graph (Digraph)**: Edges have direction (from one vertex to another)
+  - **Undirected Graph**: Edges have no direction (bi-directional)
+  - **Weighted Graph**: Edges carry weights/costs
+  - **Unweighted Graph**: Edges have no weights
+  - **Cyclic Graph**: Contains at least one cycle
+  - **Acyclic Graph**: No cycles
+  - **Connected Graph**: Every vertex reachable from every other vertex (in undirected)
+  - **Disconnected Graph**: Some vertices are not reachable from others
 
 ---
 
-##  Common Use Cases / Patterns
+## Graph Representations
 
-### 1. Level Order Traversal (BFS) in Trees and Graphs
-- Explore nodes level by level using a queue
-
-### 2. Sliding Window Problems
-- Maintain a window of elements with efficient insertions and deletions
-
-### 3. Scheduling and Resource Management
-- Simulate tasks in order (e.g., CPU task scheduling)
-
-### 4. Implementing Cache (LRU Cache often uses queue + hashmap)
+- **Adjacency Matrix**: 2D array where `matrix[i][j]` indicates edge presence/weight
+- **Adjacency List**: Array or list where each vertex points to a list of neighbors
+- **Edge List**: List of edges as pairs (or triples if weighted)
 
 ---
 
-##  Important Problems to Practice
+## Time Complexity
 
-| Problem                                              | Key Concept        |
-|-----------------------------------------------------|--------------------|
-| [Implement Queue using Stacks](https://leetcode.com/problems/implement-queue-using-stacks/) | Queue with stacks   |
-| [Moving Average from Data Stream](https://leetcode.com/problems/moving-average-from-data-stream/) | Sliding window queue|
-| [Rotting Oranges](https://leetcode.com/problems/rotting-oranges/)               | BFS in grid using queue |
-| [Number of Islands](https://leetcode.com/problems/number-of-islands/)           | BFS with queue      |
-| [Perfect Squares](https://leetcode.com/problems/perfect-squares/)                | BFS shortest path   |
+| Operation                        | Adjacency Matrix | Adjacency List  |
+|---------------------------------|------------------|-----------------|
+| Check if edge exists             | O(1)             | O(V) or O(E)    |
+| Add edge                        | O(1)             | O(1)            |
+| Remove edge                    | O(1)             | O(V) or O(E)    |
+| Iterate over neighbors          | O(V)             | O(degree of vertex) |
+
+*(V = number of vertices, E = number of edges)*
+
+---
+
+## Common Graph Traversal Algorithms
+
+### 1. Breadth-First Search (BFS)
+- Explores graph level by level using a queue
+- Finds shortest path in unweighted graphs
+
+### 2. Depth-First Search (DFS)
+- Explores as far as possible along each branch using recursion or stack
+- Useful for cycle detection, topological sorting
+
+---
+
+## Common Patterns / Problems
+
+### 1. Cycle Detection
+- Detect cycles in directed/undirected graphs using DFS or Union-Find
+
+### 2. Topological Sorting
+- Order vertices in a Directed Acyclic Graph (DAG)
+
+### 3. Shortest Path
+- BFS for unweighted graphs
+- Dijkstra’s algorithm for weighted graphs with non-negative weights
+- Bellman-Ford for graphs with negative weights
+
+### 4. Connected Components
+- Find isolated subgraphs in an undirected graph
+
+### 5. Minimum Spanning Tree (MST)
+- Find subset of edges connecting all vertices with minimum total weight (Kruskal’s, Prim’s algorithms)
+
+---
+
+## Important Problems to Practice
+
+| Problem                                                | Key Concept                 |
+|-------------------------------------------------------|-----------------------------|
+| [Number of Islands](https://leetcode.com/problems/number-of-islands/)               | BFS/DFS for connected components |
+| [Course Schedule](https://leetcode.com/problems/course-schedule/)                   | Cycle detection + topological sort|
+| [Clone Graph](https://leetcode.com/problems/clone-graph/)                           | Graph traversal + copy        |
+| [Graph Valid Tree](https://leetcode.com/problems/graph-valid-tree/)                 | Check connectivity + cycles  |
+| [Network Delay Time](https://leetcode.com/problems/network-delay-time/)             | Dijkstra’s algorithm          |
 
 ---
 
 ## Tips & Tricks
 
-- Use a queue to maintain order when traversing levels or processing tasks
-- Circular queues solve space wastage problems in fixed-size arrays
-- Priority queues are great for problems requiring dynamic ordering
-- When implementing BFS, use a queue to track nodes to visit next
+- Choose adjacency list for sparse graphs, adjacency matrix for dense graphs
+- Use BFS for shortest paths in unweighted graphs
+- Use DFS recursion carefully to avoid stack overflow (consider iterative DFS)
+- Use visited sets or arrays to avoid revisiting nodes
+- For directed graphs, track recursion stack to detect cycles
 
 ---
 
 ## Resources to Explore
 
-- [NeetCode Queues Playlist](https://www.youtube.com/playlist?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf) *(includes stacks too)*
-- [GeeksforGeeks Queue Data Structure](https://www.geeksforgeeks.org/queue-data-structure/)
-- [Visualgo Queue Visualization](https://visualgo.net/en/list)
+- [NeetCode Graphs Playlist](https://www.youtube.com/playlist?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf)
+- [GeeksforGeeks Graph Data Structure](https://www.geeksforgeeks.org/graph-data-structure-and-algorithms/)
+- [Visualgo Graph Visualization](https://visualgo.net/en/graphds)
 
 ---
 
-
+Keep exploring the connections! 
