--- a/notes/4. Linked List.md
+++ b/notes/4. Linked List.md
@@ -86,4 +86,15 @@ A **Linked List** is a linear data structure where elements (nodes) are stored i
 
 ---
 
+## Implementation
+``` python
+class Node:
+  def __init__(self, value=None, next = None):
+    self.value = value
+    self.next = next
 
+class LinkedList:
+  def __init__(self, head):
+    self.head = None
+
+```
