Update 2. Asymptotic Notation.md

--- a/notes/Algoritms/2. Asymptotic Notation.md
+++ b/notes/Algoritms/2. Asymptotic Notation.md
@@ -35,7 +35,9 @@ To ignore constants and lower-order terms.
 
 **Interpretation**: The algorithm always takes around *f(n)* time.
 
-## Comparision Table | Notation | Meaning       | Bound Type  | Use Case     |
+## Comparison Table 
+
+| Notation | Meaning       | Bound Type  | Use Case     |
 | -------- | ------------- | ----------- | ------------ |
 | O(f(n))  | At most f(n)  | Upper Bound | Worst Case   |
 | Ω(f(n))  | At least f(n) | Lower Bound | Best Case    |
